Challenge Unidad 1 Sprint 01
Primer ejercicio de la unidad 1

--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
@@ -56,6 +56,28 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "### Aptitudes en Data Science\n",
+    ">**Lo más importante**  \n",
+    ">* Matemáticas\n",
+    ">* Python\n",
+    ">* SQL  \n",
+    ">![Logo_Python](./img/python.png)  \n",
+    ">\n",
+    ">Otro tema muy importante es la ***Estadística.***  \n",
+    ">  \n",
+    ">Si tienes dudas, puedes escribirnos a: ta_ds_online@thebridgeschool.es  \n",
+    ">  \n",
+    ">Y en esta web se aprende mucho sobre *Machine Learning:* [Kaggle](https://www.kaggle.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Ejercicio 2  \n",
@@ -74,6 +96,57 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align:center\"><img src=\"./img/md_ejercicio_2.png\" /></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### En Html para que se asemeje a la imagen\n",
+    "<table style= \"border-collapse: collapse;\">\n",
+    "<tr>\n",
+    "    <th style=\"border: none; border-bottom: 2px solid grey; text-align: left; font-weight: bold;\">Fundamentals</th>\n",
+    "    <th style=\"border: none; border-bottom: 2px solid grey; text-align: left; font-weight: bold;\">Data Analysis</th>\n",
+    "    <th style=\"border: none; border-bottom: 2px solid grey; text-align: left; font-weight: bold;\">Machine Learning</th>\n",
+    "    <th style=\"border: none; border-bottom: 2px solid grey; text-align: left; font-weight: bold;\">Data & Business</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <th style=\"border: none; font-weight: normal;\">Jupyter</th>\n",
+    "    <th style=\"border: none; font-weight: normal;\">SQL</th>\n",
+    "    <th style=\"border: none; font-weight: normal;\">Supervisado</th>\n",
+    "    <th style=\"border: none; font-weight: normal;\">API</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <th style=\"border: none; font-weight: normal; background-color: grey\">GitHub</th>\n",
+    "    <th style=\"border: none; font-weight: normal; background-color: grey\">Estadística</th>\n",
+    "    <th style=\"border: none; font-weight: normal; background-color: grey\">No Supervisado</th>\n",
+    "    <th style=\"border: none; font-weight: normal; background-color: grey\">Despliegue</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "    <th style=\"border: none; font-weight: normal;\">Python</th>\n",
+    "    <th style=\"border: none; font-weight: normal;\">EDA</th>\n",
+    "    <th style=\"border: none; font-weight: normal;\">Deep Learning</th>\n",
+    "    <th style=\"border: none; font-weight: normal;\">Cloud Computing</th>\n",
+    "</tr>\n",
+    "</table>  \n",
+    "<br><br><br>\n",
+    "\n",
+    "$$\n",
+    "\\sqrt{3x-1}+(1+x)^2\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### En markdown puro\n",
+    "\n",
+    "| Fundamentals | Data Analysis | Machine Learning | Data & Business |\n",
+    "| :----: |  :----:  |  :----:  |  :----:  |\n",
+    "| Jupyter       | SQL          |  Supervisado     |     API|\n",
+    "  GitHub        | Estadística  |  No Supervisado  |  Despliegue|\n",
+    "  Python        | EDA          |  Deep Learning   |  Cloud Computing|"
    ]
   }
  ],
