Challenge Unidad 2 Sprint 01
Ejercicio chatbot picsas y lista números

--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
@@ -55,10 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le mandaremos las 5 pizzas a la dirección Calle Estadio 2, 3C.\n",
+      "Serán 46.65€. Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "precio_familiar = 8.95\n",
+    "precio_mediana = 9.90\n",
+    "pizz_familiar = int(input(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de %s para la familiar o de %s para la mediana ¿Cuántas pizzas familiares desea?\"%(precio_familiar,precio_mediana)))\n",
+    "pizz_mediana = int(input(\"Estupendo, ¿cuántas pizzas medianas desea?\"))\n",
+    "direcc = input(\"Estupendo, se están preparando %s pizzas familiares y %s pizzas medianas. Digame su dirección\"%(pizz_familiar,pizz_mediana))\n",
+    "total_precio = pizz_familiar * precio_familiar + pizz_mediana * precio_mediana\n",
+    "total_pizz = pizz_familiar + pizz_mediana\n",
+    "print(\"Le mandaremos las %s pizzas a la dirección %s.\\nSerán %s€. Muchas gracias por su pedido.\"%(total_pizz,direcc,total_precio,))"
+   ]
   },
   {
    "attachments": {
@@ -85,13 +103,47 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3,8,1\n",
+      "['3', '8', '1']\n",
+      "El número mayor de tu lista es: 8\n",
+      "El número menor de tu lista es: 1\n",
+      "La suma de los elementos de tu lista es: 12\n",
+      "¿Es la diferencia entre tu número mayor y menor igual al total entre 5? False\n"
+     ]
+    }
+   ],
+   "source": [
+    "entrada = input(\"Hola. Por favor introduce tres número enteros separados por comas:\")\n",
+    "print(entrada)\n",
+    "lista = entrada.split(\",\") #Convierto el input a lista de números en tipo string\n",
+    "print(lista)\n",
+    "lista_int = list(map(int,lista)) #Creo una lista de números haciendo int sobre los distintos elementos string\n",
+    "mayor_num = max(lista_int)\n",
+    "print(\"El número mayor de tu lista es:\",mayor_num)\n",
+    "menor_num = min(lista_int)\n",
+    "print(\"El número menor de tu lista es:\",menor_num)\n",
+    "sumatorio = sum(lista_int)\n",
+    "print(\"La suma de los elementos de tu lista es:\",sumatorio)\n",
+    "condicion = mayor_num - menor_num == sumatorio/5\n",
+    "print(\"¿Es la diferencia entre tu número mayor y menor igual al total entre 5?\",condicion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
