Challenge Unidad 1 Sprint 02

--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
@@ -47,10 +47,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserto el cuadrado de 1 que es: 1\n",
+      "Inserto el cuadrado de 2 que es: 4\n",
+      "Inserto el cuadrado de 3 que es: 9\n",
+      "Inserto el cuadrado de 4 que es: 16\n",
+      "Inserto el cuadrado de 5 que es: 25\n",
+      "La lista está compuesta por: [1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "lista_cuadrado = []\n",
+    "for i,elemento in enumerate(ejer_2):\n",
+    "    cuadrado = elemento * elemento\n",
+    "    lista_cuadrado.insert(i,cuadrado)\n",
+    "    print(f\"Inserto el cuadrado de {elemento} que es: {cuadrado}\")\n",
+    "\n",
+    "print(f\"La lista está compuesta por: {lista_cuadrado}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +89,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor a encontrar es: 'un'\n",
+      "Encontrado un duplicado de 'un' en la posición 7\n",
+      "[7]\n",
+      "El valor a encontrar es: 'es'\n",
+      "Encontrado un duplicado de 'es' en la posición 3\n",
+      "Encontrado un duplicado de 'es' en la posición 13\n",
+      "[7, 3, 13]\n",
+      "El valor a encontrar es: 'binario'\n",
+      "Encontrado un duplicado de 'binario' en la posición 2\n",
+      "Encontrado un duplicado de 'binario' en la posición 15\n",
+      "[7, 3, 2, 13, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "lista_indices = []\n",
+    "\n",
+    "def find_duplicates(duplicate):\n",
+    "    print(f\"El valor a encontrar es: '{duplicate}'\")\n",
+    "    for i,elemento in enumerate(ejer_3):\n",
+    "        if elemento == duplicate:\n",
+    "            print(f\"Encontrado un duplicado de '{duplicate}' en la posición {i}\")\n",
+    "            lista_indices.insert(i,i)\n",
+    "        # Comento el print porque el resultado era muy extenso\n",
+    "        #else:\n",
+    "            # print(f\"No hay duplicados de '{duplicate}' en la posición {i}\")\n",
+    "    return lista_indices\n",
+    "\n",
+    "print(find_duplicates(\"un\"))\n",
+    "print(find_duplicates(\"es\"))\n",
+    "print(find_duplicates(\"binario\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,10 +143,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 3 se repite 7 veces\n",
+      "El número 3 se repite 7 veces\n",
+      "(19, 3, 29, 45, 67, 78)\n",
+      "La tupla tiene 26 elementos\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "contador = 0\n",
+    "for elemento in ejer_9:\n",
+    "    if elemento == 3:\n",
+    "        contador = contador + 1\n",
+    "\n",
+    "print(f\"El número 3 se repite {contador} veces\")\n",
+    "# Después de hacer el for vi que podía hacerlo igual con count\n",
+    "print(f\"El número 3 se repite {ejer_9.count(3)} veces\")\n",
+    "nueva_tupla = ejer_9[4:10]\n",
+    "print(nueva_tupla)\n",
+    "print(f\"La tupla tiene {len(ejer_9)} elementos\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,10 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for elemento in ejer_9:\n",
+    "    if elemento == 60:\n",
+    "        print(f\"{elemento} si se encuentra dentro de la tupla\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,10 +203,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
+      "<class 'list'>\n",
+      "{2, 3, 67, 5, 4, 7, 6, 9, 45, 78, 47, 19, 20, 90, 29}\n",
+      "<class 'set'>\n",
+      "{0: 3, 1: 20, 2: 3, 3: 47, 4: 19, 5: 3, 6: 29, 7: 45, 8: 67, 9: 78, 10: 90, 11: 3, 12: 3, 13: 5, 14: 2, 15: 4, 16: 7, 17: 9, 18: 4, 19: 2, 20: 4, 21: 3, 22: 3, 23: 4, 24: 6, 25: 7}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9_lista = list(ejer_9)\n",
+    "print(ejer_9_lista)\n",
+    "print(type(ejer_9_lista))\n",
+    "\n",
+    "ejer_9_set = set(ejer_9)\n",
+    "print(ejer_9_set)\n",
+    "print(type(ejer_9_set))\n",
+    "\n",
+    "ejer_9_dic = {}\n",
+    "\n",
+    "for clave, valor in enumerate(ejer_9):\n",
+    "    ejer_9_dic[clave] = valor\n",
+    "print(ejer_9_dic)\n",
+    "print(type(ejer_9_dic))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +247,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto de los valores del diccionario es: 19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "lista_valores = list(ejer_6.values())\n",
+    "resultado = 1\n",
+    "for values in lista_valores:\n",
+    "    resultado = resultado * values\n",
+    "\n",
+    "print(f\"El producto de los valores del diccionario es: {resultado}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,14 +281,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': ['Harry Potter', 'ESDLA', 'Matemáticas', 'Canción de hielo y fuego'], 'autor': ['JKR', 'Tolkien', 'Diversos autores', 'GRRM'], 'idioma original': ['Inglés', 'Élfico', 'Español', 'Inglés'], 'año de publicación': [1997, 1954, 2023, 1996]}\n",
+      "Mi libreria ['Harry Potter', 'ESDLA', 'Matemáticas', 'Canción de hielo y fuego']\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "libro_dict = dict.fromkeys([\"título\",\"autor\",\"idioma original\",\"año de publicación\"])\n",
+    "libreria = []\n",
+    "\n",
+    "for i,value in  enumerate(libro_dict):\n",
+    "    if value == 'título':\n",
+    "        libro_dict[value] = [\"Harry Potter\",\"ESDLA\",\"Matemáticas\",\"Canción de hielo y fuego\"]\n",
+    "    elif value == 'autor':\n",
+    "        libro_dict[value] = [\"JKR\",\"Tolkien\",\"Diversos autores\",\"GRRM\"]\n",
+    "    elif value == 'idioma original':\n",
+    "        libro_dict[value] = [\"Inglés\",\"Élfico\",\"Español\",\"Inglés\"]\n",
+    "    elif value == 'año de publicación':\n",
+    "        libro_dict[value] = [1997,1954,2023,1996]\n",
+    "\n",
+    "    \n",
+    "print(libro_dict)\n",
+    "libreria = list(libro_dict[\"título\"])\n",
+    "print(f\"Mi libreria {libreria}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': ['Harry Potter', 'ESDLA', 'Matemáticas', 'Canción de hielo y fuego'], 'autor': ['JKR', 'Tolkien', 'Diversos autores', 'GRRM'], 'idioma original': 'esperanto', 'año de publicación': [1997, 1954, 2023, 1996]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,value in  enumerate(libro_dict):\n",
+    "    if value == \"idioma original\":\n",
+    "        libro_dict.update({value: \"esperanto\"})\n",
+    "print(libro_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,10 +352,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ese no lo tengo, ¿Mola?\n",
+      "El libro ESDLA se encuentra en tu libreria\n"
+     ]
+    }
+   ],
+   "source": [
+    "titulo = \"Pulgarcito\"\n",
+    "encontrado = 0\n",
+    "for elemento in libreria:\n",
+    "    if elemento == titulo:\n",
+    "        encontrado = encontrado + 1\n",
+    "        print(f\"El libro {titulo} se encuentra en tu libreria\")\n",
+    "\n",
+    "if encontrado == 0:\n",
+    "    print(f\"Ese no lo tengo, ¿Mola?\")\n",
+    "\n",
+    "titulo = \"ESDLA\"\n",
+    "encontrado = 0\n",
+    "for elemento in libreria:\n",
+    "    if elemento == titulo:\n",
+    "        encontrado = encontrado + 1\n",
+    "        print(f\"El libro {titulo} se encuentra en tu libreria\")\n",
+    "\n",
+    "if encontrado == 0:\n",
+    "    print(f\"Ese no lo tengo, ¿Mola?\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,10 +397,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ya lo hice en el 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ya lo hice en el 2\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,10 +422,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ese no lo tengo, ¿Mola?\n",
+      "El libro ESDLA se encuentra en tu libreria\n"
+     ]
+    }
+   ],
+   "source": [
+    "def encuentra_libro(libreria,titulo=None):\n",
+    "    encontrado = 0\n",
+    "    mensaje = ''\n",
+    "    \n",
+    "    for elemento in libreria:\n",
+    "        if elemento == titulo:\n",
+    "            encontrado = encontrado + 1\n",
+    "            mensaje = f\"El libro {titulo} se encuentra en tu libreria\"\n",
+    "\n",
+    "    if encontrado == 0:\n",
+    "        mensaje = f\"Ese no lo tengo, ¿Mola?\"\n",
+    "    \n",
+    "    return mensaje\n",
+    "\n",
+    "print(encuentra_libro(libreria,\"Pulgarcito\"))\n",
+    "print(encuentra_libro(libreria,\"ESDLA\"))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,10 +463,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dirección de correo válida'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def validate_mail(mail):\n",
+    "    mensaje = \"\"\n",
+    "    if isinstance(mail, str):\n",
+    "        validator = \"@\" in email\n",
+    "        if validator:\n",
+    "            mensaje = f\"Dirección de correo válida\"\n",
+    "        else:\n",
+    "            mensaje = f\"Dirección de correo inválida\"\n",
+    "    else:\n",
+    "        mensaje = f\"Dirección de correo inválida\"\n",
+    "\n",
+    "    return mensaje\n",
+    "\n",
+    "email = input(\"Ingresa tu dirección de correo electrónico\")\n",
+    "validate_mail(email)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,15 +514,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La letra del DNI es: P'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def validate_dni(dni):\n",
+    "    mensaje =''\n",
+    "    palabra='TRWAGMYFPDXBNJZSQVHLCKE'\n",
+    "    if len(dni) >= 7 and len(dni) <=8:\n",
+    "        dni = int(dni)\n",
+    "        mensaje = f\"La letra del DNI es: {palabra[dni%23]}\"\n",
+    "    else:\n",
+    "        mensaje = \"El DNI no tiene la extensión correcta\"\n",
+    "\n",
+    "    return mensaje\n",
+    "\n",
+    "validate_dni(input(\"Introduce la parte numérica de tu DNI\"))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
