Challenge Unidad 2 Sprint 02

--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
@@ -118,11 +118,200 @@
     "\n",
     "Jeff.deposit(20.00) # Devuelve 'Jeff tiene un saldo de 58.'\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class User:\n",
+    "    def __init__(self,nombre,saldo_inicial,checking_account):\n",
+    "       \n",
+    "        if type(saldo_inicial) is float:\n",
+    "            saldo_inicial = int(saldo_inicial)\n",
+    "        if not type(saldo_inicial) is int:\n",
+    "            raise TypeError(\"Sólo se admiten números enteros para el saldo.\")\n",
+    "        if saldo_inicial < 0:\n",
+    "            raise ValueError(\"El saldo inicial debe ser superior a 0.\")\n",
+    "        self.nombre = nombre\n",
+    "        self.saldo_inicial = saldo_inicial\n",
+    "        self.checking_account = bool(checking_account)\n",
+    "\n",
+    "    def withdraw(self,retirada):\n",
+    "        if type(retirada) is float:\n",
+    "            retirada = int(retirada)\n",
+    "        if not type(retirada) is int:\n",
+    "            raise TypeError(\"Debe especificarse un número entero para retirar.\")\n",
+    "        self.saldo_inicial= self.saldo_inicial - retirada\n",
+    "        if self.saldo_inicial < 0:\n",
+    "            self.saldo_inicial = self.saldo_inicial + retirada\n",
+    "            raise ValueError(f\"{self.nombre} no tiene suficiente saldo para la transacción.\")\n",
+    "        elif self.saldo_inicial >= 0:\n",
+    "            return f\"{self.nombre} tiene un saldo de {self.saldo_inicial}.\"\n",
+    "        \n",
+    "    def deposit(self,ingreso):\n",
+    "        if type(ingreso) is float:\n",
+    "            ingreso = int(ingreso)\n",
+    "        if not type(ingreso) is int:\n",
+    "            raise TypeError(\"Debe especificarse un número entero para ingresar.\")\n",
+    "        self.saldo_inicial = self.saldo_inicial + ingreso\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.saldo_inicial}.\"\n",
+    "    \n",
+    "    def transfer(self,usuario_destino,importe):\n",
+    "        if type(importe) is float:\n",
+    "            importe = int(importe)\n",
+    "        if not type(importe) is int:\n",
+    "            raise TypeError(\"Debe especificarse un número entero para transferir.\")\n",
+    "        if usuario_destino.checking_account == False:\n",
+    "            raise ValueError(f\"{usuario_destino.nombre} no puede recibir transferencias.\")\n",
+    "        self.withdraw(importe)\n",
+    "        usuario_destino.deposit(importe)\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.saldo_inicial} y {usuario_destino.nombre} tiene un saldo de {usuario_destino.saldo_inicial}.\"\n",
+    "       \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Jeff = User('Jeff', 70, True)\n",
+    "Joe = User('Joe', 70, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jeff tiene un saldo de 68.'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff.withdraw(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Joe tiene un saldo de 20 y Jeff tiene un saldo de 118.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Joe.transfer(Jeff, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Joe no puede recibir transferencias.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mJeff\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtransfer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJoe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m80\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 40\u001b[39m, in \u001b[36mUser.transfer\u001b[39m\u001b[34m(self, usuario_destino, importe)\u001b[39m\n\u001b[32m     38\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mDebe especificarse un número entero para transferir.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     39\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m usuario_destino.checking_account == \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00musuario_destino.nombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m no puede recibir transferencias.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     41\u001b[39m \u001b[38;5;28mself\u001b[39m.withdraw(importe)\n\u001b[32m     42\u001b[39m usuario_destino.deposit(importe)\n",
+      "\u001b[31mValueError\u001b[39m: Joe no puede recibir transferencias."
+     ]
+    }
+   ],
+   "source": [
+    "Jeff.transfer(Joe, 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jeff tiene un saldo de 38 y Joe tiene un saldo de 100.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Joe.checking_account = True\n",
+    "Jeff.transfer(Joe, 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Jeff no tiene suficiente saldo para la transacción.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mJeff\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtransfer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJoe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 41\u001b[39m, in \u001b[36mUser.transfer\u001b[39m\u001b[34m(self, usuario_destino, importe)\u001b[39m\n\u001b[32m     39\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m usuario_destino.checking_account == \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[32m     40\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00musuario_destino.nombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m no puede recibir transferencias.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mwithdraw\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimporte\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     42\u001b[39m usuario_destino.deposit(importe)\n\u001b[32m     43\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.nombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m tiene un saldo de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.saldo_inicial\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m y \u001b[39m\u001b[38;5;132;01m{\u001b[39;00musuario_destino.nombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m tiene un saldo de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00musuario_destino.saldo_inicial\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 22\u001b[39m, in \u001b[36mUser.withdraw\u001b[39m\u001b[34m(self, retirada)\u001b[39m\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.saldo_inicial < \u001b[32m0\u001b[39m:\n\u001b[32m     21\u001b[39m     \u001b[38;5;28mself\u001b[39m.saldo_inicial = \u001b[38;5;28mself\u001b[39m.saldo_inicial + retirada\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.nombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m no tiene suficiente saldo para la transacción.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.saldo_inicial >= \u001b[32m0\u001b[39m:\n\u001b[32m     24\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.nombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m tiene un saldo de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.saldo_inicial\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\n",
+      "\u001b[31mValueError\u001b[39m: Jeff no tiene suficiente saldo para la transacción."
+     ]
+    }
+   ],
+   "source": [
+    "Jeff.transfer(Joe, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jeff tiene un saldo de 58.'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jeff.deposit(20.00)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
