Update Sprints 1 y 2 y Creación 3 y 4
Subida de los archivos modificados de los Sprints 1 y 2 y Descarga y subida al repo de los sprints 3 y 4.
**Limpieza del github desktop**

--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/01_Markdown_en_Jupyter_I_alumno.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/01_Markdown_en_Jupyter_I_alumno.ipynb
@@ -40,6 +40,8 @@
     "## 1. Primera celda\n",
     "Haz doble clik en esta celda y verás cómo cambia el texto. Significa que estás en el **modo edición** de Markdown.\n",
     "\n",
+    "Hola\n",
+    "\n",
     "Haz ctrl + enter para ejecuta la celda (o botón de play de arriba). Así abandonamos el modo edición y nuestro texto obtiene el formato que deseábamos.\n",
     "\n",
     "**¡Tu turno!** Crea una celda nueva en el menu de arriba y selecciona la opción Markdown. Y luego intenta replicar la celda siguiente a la de la imagen"
@@ -60,8 +62,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mis primeros pasos con Markdown...\n",
+    "... son muy buenos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +99,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Cabecera 1\n",
+    "## Cabecera 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,11 +112,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Cabecera 3\n",
+    "#### Cabecera 4\n",
+    "##### Cabecera 5\n",
+    "###### Cabecera 6\n",
+    "####### Cabecera 7"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,7 +133,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h1>Header 1 </h1>\n",
+    "<h2>Header 2 </h2>\n",
+    "<h3>Header 3 </h3>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,7 +150,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Texto en negrita**\n",
+    "*Texto en cursiva*\n",
+    "***Texto en negrita y cursiva***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,6 +169,14 @@
    "source": [
     "## 5. Citar\n",
     "En ocasiones resulta útil poner una citación, o una nota, destacándola con un margen. Esto lo podemos hacer mediante el símbolo mayor que \">\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Recuerda la importancia del conocimiento del negocio y del dominio\n",
+    ">>Y utilizar atajos del teclado"
    ]
   },
   {
