--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/02_Markdown_en_Jupyter_II_alumno.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/02_Markdown_en_Jupyter_II_alumno.ipynb
@@ -29,11 +29,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "En un lugar de la mancha  \n",
+    "El segundo texto"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,13 +42,6 @@
    "source": [
     "La marca para indicarle a Markdown que debe considerar una línea nueva son dos espacios seguidos."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -60,7 +54,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Primer elemento\n",
+    "2. Segundo elemento"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,7 +69,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* Elemento 1\n",
+    "* Elemento 2\n",
+    "- Elemento 3\n",
+    "+ Elemento 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +87,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```Python\n",
+    "variable = \"Esto es una variable\"\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,7 +156,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![esta en el mismo directorio](./img/error.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +170,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
+    "<img src=\"./img/error.png\" width = 100>\n"
    ]
   },
   {
