--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/11_Ejercicios_Python_Basisc_I_3.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/11_Ejercicios_Python_Basisc_I_3.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,21 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "A = 4\n",
+    "B = \"Text\"\n",
+    "C = 4.1\n",
+    "condicion_1 = A == B\n",
+    "print(condicion_1)\n",
+    "condicion_2 = A != C\n",
+    "print(condicion_2)\n",
+    "condicion_3 = A > C\n",
+    "print(condicion_3)\n",
+    "condicion_4 = C <= A\n",
+    "print(condicion_4)\n",
+    "condicion_5 = B != C\n",
+    "print(condicion_5)"
+   ]
   },
   {
    "attachments": {
@@ -106,8 +120,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "entry_1 = input(\"Introduce la primera variable\")\n",
+    "entry_2 = input(\"Introduce la segunda variable\")\n",
+    "condicion = entry_1 == entry_2\n",
+    "print(condicion)"
+   ]
   },
   {
    "attachments": {
@@ -126,19 +153,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Todos son iguales: False\n",
-      "Todos son iguales: False\n"
+      "Todos los valores son iguales False\n",
+      "Al menos un valor es igual a otro True\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "entry_1 = input(\"Introduce la primera variable\")\n",
+    "entry_2 = input(\"Introduce la segunda variable\")\n",
+    "entry_3 = input(\"Introduce la segunda variable\")\n",
+    "condicion1 = entry_1 == entry_2\n",
+    "condicion2 = entry_1 == entry_3\n",
+    "condicion3 = entry_2 == entry_3\n",
+    "resultado = condicion1 and condicion2\n",
+    "resultado2 = condicion1 or condicion2 or condicion3\n",
+    "print(\"Todos los valores son iguales\",resultado)\n",
+    "print(\"Al menos un valor es igual a otro\",resultado2)"
+   ]
   },
   {
    "attachments": {
