--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/02_Ejercicios_Workout/01_Ejercicios_Markdown_I.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/02_Ejercicios_Workout/01_Ejercicios_Markdown_I.ipynb
@@ -39,7 +39,7 @@
    "id": "e165fb0c",
    "metadata": {},
    "source": [
-    "Aquí tienes cinco sencillos ejercicios para practicar lo aprendido en la primera sesión de Markdown. Utiliza las celdas que hay debajo dec cada enunciado y recuerda convertirlas a Markdown primero ;-)"
+    "Aquí tienes cinco sencillos ejercicios para practicar lo aprendido en la primera sesión de Markdown. Utiliza las celdas que hay debajo de cada enunciado y recuerda convertirlas a Markdown primero ;-)"
    ]
   },
   {
@@ -58,12 +58,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b3a2fc32",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Ciencia de Datos\n",
+    "## Introducción\n",
+    "### Herramientas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,12 +81,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b0fd666e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Markdown**\n",
+    "*Jupyter*\n",
+    "***Python***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,12 +105,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "7aa81d0f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div style= \"background-color: yellow;\">resaltado</diV>\n",
+    "<font color=\"blue\">color</font>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,12 +127,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "97aca4a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> La Ciencia de Datos es el petróleo del siglo XXI.\n",
+    ">> La Ciencia de Datos es el petróleo del siglo XXI."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,12 +152,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "919b170c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Curso de Markdown\n",
+    "**importante**\n",
+    ">Aprender es crecer\n",
+    "<div><span style=\"background-color:green\">*ejemplo*</span></div>"
+   ]
   }
  ],
  "metadata": {
@@ -170,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
