--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/02_Ejercicios_Workout/02_Ejercicios_Markdown_II.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/02_Ejercicios_Workout/02_Ejercicios_Markdown_II.ipynb
@@ -58,12 +58,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a20102cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* Manzanas\n",
+    "* Plátanos\n",
+    "* Uvas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,12 +80,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e5af15ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. Árbol binario\n",
+    "2. Random Forest\n",
+    "3. Regresión Logística"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,12 +106,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0fc171fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Frutas y Verduras\n",
+    "1. Frutas\n",
+    "* Manzana\n",
+    "* Pera\n",
+    "* Piña\n",
+    "2. Verduras\n",
+    "* Lechuga\n",
+    "* Puerro\n",
+    "* Apio"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,12 +134,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2bcc0287",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[Por aquí se cruzan puentes](https://thebridge.tech/)  \n",
+    "![Logo](https://startupvalencia.org/wp-content/uploads/2025/04/the-bridge-1.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,12 +154,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9d31a21a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "***\n",
+    "```Python\n",
+    "print(\"Hola Mundo\")\n",
+    "```\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
