--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/02_Print_y_otros_aspectos_basicos_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/02_Print_y_otros_aspectos_basicos_wtoc.ipynb
@@ -64,17 +64,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ingresos = 1000\n",
+    "gastos = 100\n",
+    "beneficios = ingresos - gastos"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresos 1000\n",
+      "Gastos 100\n",
+      "Los beneficios han sido:  900\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ingresos\",ingresos)\n",
+    "print(\"Gastos\",gastos)\n",
+    "print(\"Los beneficios han sido: \",beneficios)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,10 +103,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los beneficios de Junio han sido 900 millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "mes = \"Junio\"\n",
+    "print(\"Los beneficios de %s han sido %s millones\" %(mes,beneficios))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los beneficios de 900 han sido Junio millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Los beneficios de %s han sido %s millones\" %(beneficios,mes))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los beneficios de Agosto han sido 900 millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "mes = \"Agosto\"\n",
+    "print(\"Los beneficios de\",mes,\"han sido\", beneficios,\"millones\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,24 +173,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esto si ejecuta\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comentario de línea\n",
+    "\n",
+    "print(\"Esto si ejecuta\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fin del programa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Fin del programa\") # Esta línea indica que ha terminado"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nprint(No se va a ejecutar)\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Comentarios\n",
+    "de \n",
+    "línea\n",
+    "múltiple\n",
+    "'''\n",
+    "\n",
+    "\"\"\"\n",
+    "print(No se va a ejecutar)\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
@@ -161,17 +262,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ventas_junio' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m ventas_jun_jul = \u001b[43mventas_junio\u001b[49m + ventas_julio\n\u001b[32m      2\u001b[39m ventas_junio = \u001b[32m100\u001b[39m\n\u001b[32m      3\u001b[39m ventas_julio = \u001b[32m150\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'ventas_junio' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ventas_jun_jul = ventas_junio + ventas_julio\n",
+    "ventas_junio = 100\n",
+    "ventas_julio = 150"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250\n"
+     ]
+    }
+   ],
+   "source": [
+    "ventas_junio = 100\n",
+    "ventas_julio = 150\n",
+    "ventas_jun_jul = ventas_junio + ventas_julio\n",
+    "print(ventas_jun_jul)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +334,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x,y,z = 12,13,45"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 13 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x,y,z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,10 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "altura = 1.85\n",
+    "del altura"
+   ]
   },
   {
    "cell_type": "code",
@@ -238,7 +390,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   },
   "nbTranslate": {
    "displayLangs": [
