--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
@@ -71,10 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué esta magnífica tecnología científica,\n",
+      "\tque ahorra trabajo y nos hace la vida más fácil,\n",
+      "\t\tnos aporta tan poca felicidad?\n",
+      "\t\t\tLa respuesta es esta, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+      "\"Albert Einstein\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"¿Por qué esta magnífica tecnología científica,\\n\\tque ahorra trabajo y nos hace la vida más fácil,\\n\\t\\tnos aporta tan poca felicidad?\\n\\t\\t\\tLa respuesta es esta, simplemente: porque aún no hemos aprendido a usarla con tino.\\n\\\"Albert Einstein\\\"\")"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +121,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mi dirección: Estadio 2 Valladolid 47005\n"
+     ]
+    }
+   ],
+   "source": [
+    "street = \"Estadio\"\n",
+    "number = 2\n",
+    "city = \"Valladolid\"\n",
+    "postal_code = 47005\n",
+    "space = \" \"\n",
+    "address = street+space+str(number)+space+city+space+str(postal_code)\n",
+    "print(\"Mi dirección:\",address)"
+   ]
   },
   {
    "attachments": {
@@ -140,10 +170,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mi dirección: Estadio 2 Valladolid 47005\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Concateno en una variable address todas las variables con la variable space entre ellas\\n y las que son tipo int las convierto a string'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "street = \"Estadio\" #Declaro una variable string llamanda Street\n",
+    "number = 2  #Declaro una segunda variable int llamada number\n",
+    "city = \"Valladolid\" #Declaro una tercera variable string llamada city\n",
+    "postal_code = 47005 #Declaro una cuarta variable int llamada postal_code\n",
+    "space = \" \" #Declaro una quinta variable string con valor de espacio\n",
+    "address = street+space+str(number)+space+city+space+str(postal_code)\n",
+    "print(\"Mi dirección:\",address)\n",
+    "\"\"\"Concateno en una variable address todas las variables con la variable space entre ellas\n",
+    " y las que son tipo int las convierto a string\"\"\""
+   ]
   },
   {
    "attachments": {
@@ -180,10 +238,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 2) (1775750686.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31motra_var = \"Ejercicio\u001b[39m\n               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_variable = \"Economía\"\n",
+    "otra_var = \"Ejercicio\n",
+    "True = \"Ejercicio\"\n",
+    "mi variab1e = \"Alpha\n",
+    "exec = True\n",
+    "import = 40\n",
+    "81mi_variable = \"Agua\"\n",
+    "mi_variable10 = 6"
+   ]
   },
   {
    "attachments": {
@@ -222,7 +298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
