--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
@@ -61,10 +61,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'entero' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(suma))\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m entero,decimal\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mentero\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'entero' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "entero = 3\n",
+    "decimal = 3.5\n",
+    "print(type(entero))\n",
+    "print(type(decimal))\n",
+    "suma = entero + decimal\n",
+    "print(type(suma))\n",
+    "del entero,decimal\n",
+    "print(entero)"
+   ]
   },
   {
    "attachments": {
@@ -85,10 +115,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La temperatura 35 es 0.6108652381980153 en radianes.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "grados = input(\"¿Qué temperatura en grados hace?\")\n",
+    "radianes = int(grados)*(math.pi/180)\n",
+    "print(\"La temperatura\",grados,\"es\",radianes,\"en radianes.\")\n",
+    "35\n"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El área de tu paralelogramo es: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = int(input(\"Dime la lonigutud de la base en cm:\"))\n",
+    "altura = int(input(\"Dime la lonigutud de la altura en cm:\"))\n",
+    "area = base*altura\n",
+    "print(\"El área de tu paralelogramo es:\",area)"
+   ]
   },
   {
    "attachments": {
@@ -129,10 +196,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El área de tu paralelogramo es: 256.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = input(\"Dime la lonigutud de la base en cm:\")\n",
+    "altura = input(\"Dime la lonigutud de la altura en cm:\")\n",
+    "base = base.replace(\",\",\".\")\n",
+    "base = float(base)\n",
+    "altura = altura.replace(\",\",\".\")\n",
+    "altura = float(altura)\n",
+    "area = base*altura\n",
+    "print(\"El área de tu paralelogramo es:\",area)"
+   ]
   },
   {
    "attachments": {
@@ -151,22 +235,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jonathan, naciste en el año 1990.\n"
+     ]
+    }
+   ],
    "source": [
-    "nombre = _______(\"¿Cuál es tu nombre? \")\n",
-    "edad = _____(input(\"¿Cuál es tu edad? \"))\n",
-    "año_actual = 2024  # Puedes cambiarlo según el año en curso\n",
-    "año_nacimiento = año_actual - _____\n",
+    "nombre = input(\"¿Cuál es tu nombre? \")\n",
+    "edad = int(input(\"¿Cuál es tu edad? \"))\n",
+    "año_actual = 2025  # Puedes cambiarlo según el año en curso\n",
+    "año_nacimiento = año_actual - edad\n",
     "\n",
     "print(f\"{nombre}, naciste en el año {año_nacimiento}.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -180,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
