--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/12_Ejercicios_Python_Basisc_I_4.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/12_Ejercicios_Python_Basisc_I_4.ipynb
@@ -61,10 +61,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "17\n",
+      "63.451\n",
+      "74\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [4,6,8,-1]\n",
+    "maximo = max(list)\n",
+    "print(maximo)\n",
+    "sumatorio = sum(list)\n",
+    "print(sumatorio)\n",
+    "decimal = 63.451256965\n",
+    "redondeo = round(decimal,3)\n",
+    "print(redondeo)\n",
+    "negativo = -74\n",
+    "entero = abs(negativo)\n",
+    "print(entero)\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
@@ -92,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +132,15 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "texto = \"En un lugar de la Mancha, de cuyo nombre no quiero acordarme.\"\n",
+    "print(texto.upper())\n",
+    "print(texto.lower())\n",
+    "print(texto.title())\n",
+    "print(texto.split(\" \"))\n",
+    "print(texto.replace(\",\",\";\"))\n",
+    "print(texto.replace(\"a\",\"\"))\n"
+   ]
   },
   {
    "attachments": {
@@ -138,6 +170,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 7]\n",
+      "[1, 3, 7, 9]\n",
+      "20\n",
+      "[1, 3, 7, 9]\n",
+      "[1, 7, 9]\n",
+      "[1, 7, 4, 9]\n",
+      "[1, 7, 4, 9, 15, 17, 19, 27]\n",
+      "[1, 4, 7, 9, 15, 17, 19, 27]\n",
+      "[27, 19, 17, 15, 9, 7, 4, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [1,3,7]\n",
+    "print(lista)\n",
+    "lista.append(9) #añado un 9 al final\n",
+    "print(lista)\n",
+    "print(sum(lista)) #Sumo todos los elementos de la lista\n",
+    "print(lista) \n",
+    "lista.pop(1) #Elimino el elemento en la posicion 2 (3)\n",
+    "print(lista)\n",
+    "lista.insert(2,4) #añado un 4 en la posicion 3\n",
+    "print(lista)\n",
+    "\n",
+    "lista2 = [15,17,19,27]\n",
+    "liston = lista + lista2 #concateno ambas listas\n",
+    "print(liston)\n",
+    "liston.sort() #ordeno de menor a mayor\n",
+    "print(liston)\n",
+    "liston.sort(reverse=True) #ordeno de mayo a menor\n",
+    "print(liston)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -157,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
