--- a/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/01_Flujos_de_Control_if_for.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/01_Flujos_de_Control_if_for.ipynb
@@ -75,9 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comienza iteración con 4\n",
+      "El numero 4 es un entero\n",
+      "Finaliza iteración con 4\n",
+      "Comienza iteración con 6\n",
+      "El numero 6 es un entero\n",
+      "Finaliza iteración con 6\n",
+      "Comienza iteración con 4.0\n",
+      "El numero 4.0 es un float\n",
+      "Finaliza iteración con 4.0\n",
+      "Comienza iteración con 3.0\n",
+      "El numero 3.0 es un float\n",
+      "Finaliza iteración con 3.0\n",
+      "Finaliza celda\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [4, 6, 4.0, 3.0]\n",
     "\n",
@@ -85,6 +105,8 @@
     "    print(\"Comienza iteración con\",elemento)\n",
     "    if type(elemento) == int:        \n",
     "        print(\"El numero\", elemento, \"es un entero\")\n",
+    "    elif type(elemento) == float:\n",
+    "        print(\"El numero\", elemento, \"es un float\")\n",
     "    print(\"Finaliza iteración con\", elemento)\n",
     "\n",
     "print(\"Finaliza celda\")"
@@ -107,8 +129,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<string>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mFile \u001b[39m\u001b[32m<string>:9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(\"Finaliza iteración con\", elemento)\u001b[39m\n                                             ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [4, 6, 4.0, 3.0]\n",
+    "\n",
+    "for elemento in numeros:\n",
+    "    print(\"Comienza iteración con\",elemento)\n",
+    "    if type(elemento) == int:        \n",
+    "        print(\"El numero\", elemento, \"es un entero\")\n",
+    "    elif type(elemento) == float:\n",
+    "        print(\"El numero\", elemento, \"es un float\")\n",
+    "    print(\"Finaliza iteración con\", elemento)\n",
+    "\n",
+    "print(\"Finaliza celda\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,7 +178,7 @@
     "> if condiciones:\n",
     ">     Si se cumplen las condiciones, ejecuta este código\n",
     "> else:\n",
-    ">     Si no, ejecutas estre otro código\n",
+    ">     Si no, ejecutas este otro código\n",
     "> ```\n",
     "    \n",
     "Veamos un ejemplo"
@@ -143,10 +186,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Has empollado eh?. Enhorabuena!\n",
+      "Fin del programa\n"
+     ]
+    }
+   ],
+   "source": [
+    "nota_examen = 8\n",
+    "if nota_examen < 5 :\n",
+    "    print(\"A Septiembre, pringao\")\n",
+    "elif nota_examen < 7 :\n",
+    "    print(\"Aprobado!\")\n",
+    "else : \n",
+    "    print(\"Has empollado eh?. Enhorabuena!\")\n",
+    "\n",
+    "print(\"Fin del programa\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,10 +521,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 5 no es múltiplo de 3\n",
+      "El número 7 no es múltiplo de 3\n",
+      "El número 3 es múltiplo de 3\n",
+      "El número 4 no es múltiplo de 3\n",
+      "El número 2 no es múltiplo de 3\n",
+      "El número 4 no es múltiplo de 3\n",
+      "El número 7 no es múltiplo de 3\n",
+      "El número 6 es múltiplo de 3\n",
+      "El número 10 no es múltiplo de 3\n",
+      "El número 1 no es múltiplo de 3\n",
+      "El número 6 es múltiplo de 3\n",
+      "El número 3 es múltiplo de 3\n",
+      "El número 5 no es múltiplo de 3\n",
+      "El número 9 es múltiplo de 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in nums_bucle :\n",
+    "    if num % 3 == 0 :\n",
+    "        print(f\"El número {num} es múltiplo de 3\")\n",
+    "    else :\n",
+    "        print(f\"El número {num} no es múltiplo de 3\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -474,7 +564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
