--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Argumentos_clave-valor.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Argumentos_clave-valor.ipynb
@@ -48,10 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{'modelo': 's20', 'marca': 'Samsung', 'camara': '24MPX'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertar_movil_bd(**clave_valor):\n",
+    "    print(type(clave_valor))\n",
+    "    print(clave_valor)\n",
+    "\n",
+    "insertar_movil_bd( modelo = \"s20\",marca = \"Samsung\", camara = \"24MPX\" )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +79,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "modelo : s20\n",
+      "marca : Samsung\n",
+      "camara : 24MPX\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertar_movil_bd(**kwargs):\n",
+    "    for clave,valor in kwargs.items():\n",
+    "        print(clave,\":\",valor)\n",
+    "insertar_movil_bd( modelo = \"s20\",marca = \"Samsung\", camara = \"24MPX\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def insertar_movil(*args, **kwargs):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
