--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Argumentos_variables.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Argumentos_variables.ipynb
@@ -49,7 +49,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def multiplica(*argumentos):\n",
+    "    print(argumentos)\n",
+    "    print(type(argumentos))\n",
+    "\n",
+    "multiplica(2,3,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El siguente elemento es 2\n",
+      "El siguente elemento es 4\n",
+      "El siguente elemento es 5\n",
+      "El resultado es: 40\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiplica(*args):\n",
+    "    resultado = 1\n",
+    "    for i,elemento in enumerate(args):\n",
+    "        print(\"El siguente elemento es\", args[i])\n",
+    "        resultado = resultado * elemento\n",
+    "    print(f\"El resultado es: {resultado}\")\n",
+    "    return resultado\n",
+    "\n",
+    "multiplica (2,4,5)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,11 +106,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "multiplica_divide() missing 1 required keyword-only argument: 'div'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m     resultado = resultado / div\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m resultado\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[43mmultiplica_divide\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: multiplica_divide() missing 1 required keyword-only argument: 'div'"
+     ]
+    }
+   ],
    "source": [
-    "# En este ejemplo, uso el ultimo argumento para dividir todo lo que habiamos multiplicado por este argumento\n"
+    "# En este ejemplo, uso el ultimo argumento para dividir todo lo que habiamos multiplicado por este argumento\n",
+    "def multiplica_divide(*args,div):\n",
+    "    resultado = 1\n",
+    "    for i in args:\n",
+    "        resultado = resultado * i\n",
+    "    resultado = resultado / div\n",
+    "    return resultado\n",
+    "multiplica_divide(2,3,5)"
    ]
   },
   {
@@ -91,10 +154,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiplica_divide(*args,div):\n",
+    "    resultado = 1\n",
+    "    for i in args:\n",
+    "        resultado = resultado * i\n",
+    "    resultado = resultado / div\n",
+    "    return resultado\n",
+    "multiplica_divide(2,3,div=5)"
+   ]
   },
   {
    "cell_type": "code",
@@ -106,7 +188,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -120,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
