--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Diccionarios.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Diccionarios.ipynb
@@ -61,10 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'color': 'Rojo', 'Marca': 'Hyundai'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "coche = {\n",
+    "    \"color\": \"Rojo\",\n",
+    "    \"Marca\": \"Hyundai\"\n",
+    "}\n",
+    "print(coche)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,10 +100,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rojo\n",
+      "{'color': 'Rojo', 'Marca': 'Hyundai', 'puertas': 4}\n",
+      "{'color': 'Rojo', 'Marca': 'Hyundai'}\n",
+      "dict_keys(['color', 'Marca'])\n",
+      "dict_values(['Rojo', 'Hyundai'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(coche[\"color\"])\n",
+    "# añadir\n",
+    "coche[\"puertas\"] = 4\n",
+    "print(coche)\n",
+    "del coche[\"puertas\"]\n",
+    "print(coche)\n",
+    "print(coche.keys())\n",
+    "print(coche.values())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,11 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Podemos empezar tambien mediante un diccionario vacío"
+    "# Podemos empezar tambien mediante un diccionario vacío\n",
+    "tienda = {}\n",
+    "tienda = dict()"
    ]
   },
   {
@@ -177,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -191,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
