--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Funciones_de_usuario_I.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Funciones_de_usuario_I.ipynb
@@ -98,11 +98,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "124.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Vamos a crear un conversor de km a millas"
+    "# Vamos a crear un conversor de km a millas\n",
+    "def km_converter(kms):\n",
+    "    millas = 0.62 * kms\n",
+    "    round(millas,1)\n",
+    "    return millas\n",
+    "km_converter(200)\n"
    ]
   },
   {
@@ -128,10 +144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22:09:43.374575\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def que_hora_es():\n",
+    "    now = datetime.now().time()\n",
+    "    return now\n",
+    "\n",
+    "print(que_hora_es())"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,7 +175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
