--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Listas_revisited.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Listas_revisited.ipynb
@@ -90,11 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enero\n",
+      "Febrero\n"
+     ]
+    }
+   ],
    "source": [
-    "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+    "print(months[0])\n",
+    "print(months[-2])"
    ]
   },
   {
@@ -106,11 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]\n",
+    "print(months.index(\"Febrero\"))"
    ]
   },
   {
@@ -122,11 +142,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34, 15, 26]\n",
+      "[34, 15, 26, 18, 22]\n",
+      "[34, 15, 26, 18, 22]\n",
+      "[34, 15, 26, 18, 22]\n"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "sub_degrees = degrees[1:4] #Se pone el índice el número posterior al que queremos\n",
+    "print(sub_degrees)\n",
+    "sub_degrees = degrees[1:6]\n",
+    "print(sub_degrees)\n",
+    "sub_degrees = degrees[1:len(degrees)]\n",
+    "print(sub_degrees)\n",
+    "sub_degrees = degrees[1:]\n",
+    "print(sub_degrees)"
    ]
   },
   {
@@ -141,12 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Enero', 'Abril', 'Marzo']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Accediendo mediante el indice\n",
-    "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+    "months[1] = \"Abril\"\n",
+    "months"
    ]
   },
   {
@@ -161,21 +213,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['honda', 'yamaha', 'suzuki', 'Kawasaki']\n",
+      "['honda', 'yamaha', 'Ducati', 'suzuki', 'Kawasaki']\n"
+     ]
+    }
+   ],
    "source": [
     "# Con append lo añadimos al final de la lista\n",
-    "motorcycles = ['honda', 'yamaha', 'suzuki']"
+    "motorcycles = ['honda', 'yamaha', 'suzuki']\n",
+    "motorcycles.append(\"Kawasaki\")\n",
+    "print(motorcycles)\n",
+    "motorcycles.insert(2,\"Ducati\")\n",
+    "print(motorcycles)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Es muy comun crear una lista vacia, y a lo largo del programa, ir añadiendo elementos"
+    "# Es muy comun crear una lista vacia, y a lo largo del programa, ir añadiendo elementos\n",
+    "lista_motos = []\n",
+    "lista_motos.append(\"primera marca\")"
    ]
   },
   {
@@ -192,21 +259,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Seat', 'BMW', 'VW']\n"
+     ]
+    }
+   ],
    "source": [
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "cars.remove(\"VW\")\n",
+    "print(cars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VW', 'BMW', 'VW']\n",
+      "Seat\n"
+     ]
+    }
+   ],
    "source": [
     "# Eliminar elementos por indice, y guarda ese valor en una variable\n",
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "eliminado = cars.pop(1)\n",
+    "print(cars)\n",
+    "print(eliminado)"
    ]
   },
   {
@@ -243,11 +332,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 18, 22, 22, 26, 34]\n",
+      "[15, 18, 22, 22, 26, 34]\n",
+      "[34, 26, 22, 22, 18, 15]\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "degrees.sort()\n",
+    "print(degrees)\n",
+    "#degrees.sort(reverse=True)\n",
+    "print(degrees)\n",
+    "degrees.reverse()\n",
+    "print(degrees)\n",
+    "#Ocurrencias\n",
+    "print(degrees.count(22))\n"
    ]
   },
   {
@@ -274,11 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "ultimo_elemento = degrees[len(degrees)-1]\n",
+    "ultimo_elemento"
    ]
   },
   {
@@ -298,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -312,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
