--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Tuplas.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Tuplas.ipynb
@@ -55,10 +55,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 'Texto')\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla_ejemplo = (3,\"Texto\")\n",
+    "print(tupla_ejemplo)\n",
+    "print(type(tupla_ejemplo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El primer elemento es 3\n",
+      "El segundo elemento es Texto\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"El primer elemento es\",tupla_ejemplo[0])\n",
+    "print(\"El segundo elemento es\",tupla_ejemplo[1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,17 +101,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(24,)\n",
+      "<class 'tuple'>\n",
+      "24\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla_unica = (24,)\n",
+    "print(tupla_unica)\n",
+    "print(type(tupla_unica))\n",
+    "mala_tupla = (24)\n",
+    "print(mala_tupla)\n",
+    "print(type(mala_tupla))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, ('A', 'B', 'C'))\n",
+      "4\n",
+      "('A', 'B', 'C')\n",
+      "B\n"
+     ]
+    }
+   ],
+   "source": [
+    "# anidar tuplas\n",
+    "tupla_anid = (1,2,3,(\"A\",\"B\",\"C\"))\n",
+    "print(tupla_anid)\n",
+    "print(len(tupla_anid))\n",
+    "print(tupla_anid[3])\n",
+    "print(tupla_anid[3][1])\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
