--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
@@ -87,10 +87,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bladger\n",
+      "Dori\n",
+      "Chotuas\n",
+      "['Bladger', 'Chotuas', 'Dori']\n",
+      "Bladger\n",
+      "El invitado Chotuas no puede acudir, sólo irán ['Bladger', 'Dori']\n",
+      "['Bladger', 'Chemita', 'Dori']\n"
+     ]
+    }
+   ],
+   "source": [
+    "invitados = [\"Bladger\",\"Dori\",\"Chotuas\"]\n",
+    "for invitado in invitados :\n",
+    "    print(invitado)\n",
+    "invitados.sort()\n",
+    "print(invitados)\n",
+    "print(invitados[0])\n",
+    "eliminado = invitados.pop(1)\n",
+    "print(f\"El invitado {eliminado} no puede acudir, sólo irán {invitados}\")\n",
+    "invitados.insert(1,\"Chemita\")\n",
+    "print(invitados)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +155,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "(2,)\n",
+      "(2, 2, 5, 'Texto')\n",
+      "(2, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla_unica = (2,)\n",
+    "print(type(tupla_unica))\n",
+    "print(tupla_unica)\n",
+    "\n",
+    "tupla_triple = (2,5,\"Texto\")\n",
+    "tupla_unica = tupla_unica + tupla_triple\n",
+    "print(tupla_unica)\n",
+    "tupla_cuatro = (tupla_unica[0:2])\n",
+    "print(tupla_cuatro)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[6, 5, 4, 3, 2, 1]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [1,2,3,4,5,6]\n",
+    "print(ejer_3)\n",
+    "ejer_3.reverse()\n",
+    "print(ejer_3)\n",
+    "\n",
+    "ejer_3_inv = ejer_3.reverse()\n",
+    "print(ejer_3_inv)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +268,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La primera palabra es cien\n",
+      "cien\n",
+      "La primera palabra es cañones\n",
+      "ccienacienñcienocienncieneciens\n",
+      "La primera palabra es por\n",
+      "pccienacienñcienocienncieneciensoccienacienñcienocienncieneciensr\n",
+      "La primera palabra es banda\n",
+      "bpccienacienñcienocienncieneciensoccienacienñcienocienncieneciensrapccienacienñcienocienncieneciensoccienacienñcienocienncieneciensrnpccienacienñcienocienncieneciensoccienacienñcienocienncieneciensrdpccienacienñcienocienncieneciensoccienacienñcienocienncieneciensra\n",
+      "bpccienacienñcienocienncieneciensoccienacienñcienocienncieneciensrapccienacienñcienocienncieneciensoccienacienñcienocienncieneciensrnpccienacienñcienocienncieneciensoccienacienñcienocienncieneciensrdpccienacienñcienocienncieneciensoccienacienñcienocienncieneciensra\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_4 = (\"cien\", \"cañones\", \"por\", \"banda\")\n",
+    "resultado = \"\"\n",
+    "for palabra in ejer_4:\n",
+    "    resultado = resultado.join(palabra)\n",
+    "    print(f\"La primera palabra es {palabra}\")\n",
+    "    print(resultado)\n",
+    "print(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +326,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 45, 67, 78, 90]\n",
+      "[20, 47, 19, 29, 0, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = [20, 47, 19, 29, 45, 67, 78, 90]\n",
+    "print(ejer_5)\n",
+    "ejer_5.index(45)\n",
+    "ejer_5[ejer_5.index(45)] = 0\n",
+    "print(ejer_5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,10 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3)\n",
+    "print(ejer_6[2])\n",
+    "print(ejer_6[-3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,6 +425,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+      "Elemento no es igual a 3\n",
+      "Elemento no es igual a 3\n",
+      "Elemento no es igual a 3\n",
+      "Elemento no es igual a 3\n",
+      "Elemento no es igual a 3\n",
+      "[20, 47, 19, 29, 45, 67, 78, 90, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_7 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+    "lista = ejer_7.copy()\n",
+    "print(lista)\n",
+    "for elemento in lista:\n",
+    "    if elemento == 3:\n",
+    "        lista.remove(elemento)\n",
+    "    else:\n",
+    "        print(\"Elemento no es igual a 3\")\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -317,7 +464,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
