--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
@@ -81,8 +81,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 1}\n",
+      "{'x': 2}\n",
+      "{'x': 3}\n",
+      "{'x': 3, 'y': 1}\n",
+      "{'x': 3, 'y': 2}\n",
+      "{'x': 3, 'y': 2, 'z': 1}\n",
+      "{'x': 3, 'y': 2, 'z': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
+    "ejerc_1_dict =  {}\n",
+    "for clave, valor in ejer_1:\n",
+    "    if ejerc_1_dict[clave]\n",
+    "    ejerc_1_dict[clave] = ejerc_1_dict[clave]valor\n",
+    "    print(ejerc_1_dict)\n",
+    "print(ejerc_1_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,10 +140,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 8]\n",
+      "[234, 98, 78, 29]\n",
+      "{4: 78, 2: 98, 8: 234, 5: 29, 'renta': 30}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_2 = {4:78, 2:98, 8:234, 5:29}\n",
+    "lista_claves = list(ejer_2.keys())\n",
+    "lista_claves.sort()\n",
+    "print(lista_claves)\n",
+    "lista_valores = list(ejer_2.values())\n",
+    "lista_valores.sort(reverse = True)\n",
+    "print(lista_valores)\n",
+    "\n",
+    "ejer_2[\"renta\"] = 30\n",
+    "print(ejer_2)\n",
+    "ejer_2.get(2,\"No encuentro\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,10 +249,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{40, 10, 3}\n",
+      "{40, 56, 10, 3}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'builtin_function_or_method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m nuevo_set.add(\u001b[32m56\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(nuevo_set)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mnuevo_set\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdiscard\u001b[49m\u001b[43m[\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(nuevo_set)\n",
+      "\u001b[31mTypeError\u001b[39m: 'builtin_function_or_method' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "nuevo_set = {3,10,40}\n",
+    "print(nuevo_set)\n",
+    "nuevo_set.add(56)\n",
+    "print(nuevo_set)\n",
+    "nuevo_set.discard[-1]\n",
+    "print(nuevo_set)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
