--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Constructores.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/01_Workout/Constructores.ipynb
@@ -52,10 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    puertas = 4\n",
+    "    ruedas = 4\n",
+    "\n",
+    "    def __init__(self, marca_coche, volante_coche):\n",
+    "        self.marca = marca_coche\n",
+    "        self.volante = volante_coche\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,10 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla = Coche(\"Tesla\",1)\n",
+    "print(tesla.marca)\n",
+    "print(tesla.volante)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +118,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Coche:\n",
+    "    \n",
+    "\n",
+    "    def __init__(self, marca_coche, volante_coche = 1, num_puertas = 4, num_ruedas = 4):\n",
+    "        self.marca = marca_coche\n",
+    "        self.volante = volante_coche\n",
+    "        self.puertas = num_puertas\n",
+    "        self.ruedas = num_ruedas\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mi coche de la marca Mercedes tiene 5 puertas, 3 ruedas y 1 volante\n"
+     ]
+    }
+   ],
+   "source": [
+    "mercedes_3pt = Coche(\"Mercedes\",num_ruedas = 3,num_puertas = 5)\n",
+    "print(f\"Mi coche de la marca {mercedes_3pt.marca} tiene {mercedes_3pt.puertas} puertas, {mercedes_3pt.ruedas} ruedas y {mercedes_3pt.volante} volante\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -111,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
