--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/02_Ejercicios_Workout/07_Ejercicios_Programacion_Orientada_Objetos.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/02_Ejercicios_Workout/07_Ejercicios_Programacion_Orientada_Objetos.ipynb
@@ -63,10 +63,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Perro:\n",
+    "    patas = 4\n",
+    "    orejas = 2\n",
+    "    ojos = 2\n",
+    "\n",
+    "    def __init__(self,raza_perro,pelo_perro = \"Marrón\",dueño_perro = None,velocidad_perro = 0):\n",
+    "        self.raza = raza_perro\n",
+    "        self.pelo = pelo_perro\n",
+    "        self.dueño = dueño_perro\n",
+    "        self.velocidad = velocidad_perro\n",
+    "\n",
+    "    def andar(self,aumento_velocidad):\n",
+    "        self.velocidad = self.velocidad + aumento_velocidad\n",
+    "        return self.velocidad\n",
+    "    def parar(self):\n",
+    "        self.velocidad = 0\n",
+    "        return self.velocidad\n",
+    "    def ladrar(self,ladrido):\n",
+    "        return print(f\"GUAU! {ladrido}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "oreo = Perro(\"Bodeguero\",pelo_perro=\"Negro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tu perro es un Bodeguero, tiene el pelo Negro y como todos los perros tiene 2 ojos, 4 patas y      2 orejas\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Tu perro es un {oreo.raza}, tiene el pelo {oreo.pelo} y como todos los perros tiene {oreo.ojos} ojos, {oreo.patas} patas y\\\n",
+    "      {oreo.orejas} orejas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La velocidad del perro es 30\n",
+      "La velocidad del perro es 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "oreo.andar(15)\n",
+    "print(f\"La velocidad del perro es {oreo.velocidad}\")\n",
+    "oreo.parar()\n",
+    "print(f\"La velocidad del perro es {oreo.velocidad}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
